reports/quiz_mengenlehre.err.log
Traceback (most recent call last):
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/georg/anaconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/georg/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

Quizz 1
from jupyterquiz import display_quiz

quizz =[{
        "question": "Comment charger un module sur le cluster de l'IFB ?",
        "type": "multiple_choice",
        "answers": [
            {
                "code": "module avail -l",
                "correct": False
            },
            {
                "code": "module load",
                "correct": True
            },
            {
                "code": "module charge",
                "correct": False
            }
        ]
    },
    {
        "question": "Comment se connecter au cluster de l'IFB ?",
        "type": "multiple_choice",
        "answers": [
            {
                "code": "SSH",
                "correct": True
            },
            {
                "code": "Jupyter",
                "correct": True
            },
            {
                "code": "Galaxy",
                "correct": True
            },
            {
                "code": "En branchant mon ordinateur directement dessus",
                "correct": False
            }
        ]
    },
    {
        "question": "BASH est le seul langage compris par le Shell ?",
        "type": "multiple_choice",
        "answers": [
            {
                "code": "Vrai",
                "correct": False,
                "feedback": "Il y a aussi : bsh, ksh, csh, zsh,…"
            },
            {
                "code": "Faux",
                "correct": True,
                "feedback": "Il y a aussi : bsh, ksh, csh, zsh,…"
            },
        ]
    }
]
display_quiz(quizz)

------------------

[0;36m  Cell [0;32mIn[1], line 1[0;36m[0m
[0;31m    Quizz 1[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (485660032.py, line 1)

